objects/GEMS_Characteristic_Value__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GEMS Characteristic Values</relationshipLabel>
        <relationshipName>GEMS_Characteristic_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Char_Code__c</fullName>
        <formula>Characteristic__r.Characteristic_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Characteristic Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Characteristic_Code__c</fullName>
        <description>Integration Purpose Only</description>
        <label>Code (Integration)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Characteristic__c</fullName>
        <label>Characteristic</label>
        <referenceTo>GEMS_Characteristic__c</referenceTo>
        <relationshipLabel>GEMS Characteristic Values</relationshipLabel>
        <relationshipName>GEMS_Characteristic_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Value Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS Characteristic Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Characteristic Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_Record_Check_Gems_Characteristic_Val</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IsNew__c = false ,NOT(CONTAINS($Profile.Name,&apos;System Administrator&apos;)),NOT(CONTAINS($Profile.Name,&apos;Integration Profile&apos;)),OR(ISCHANGED(Code__c),ISCHANGED(Effective_Date__c)))</errorConditionFormula>
        <errorMessage>You can only change description of the characteristic value.</errorMessage>
    </validationRules>
</CustomObject>